# NEdyson

./: .gitignore  .slurm-435193.out.swp  CMakeLists.txt  LICENSE  PauliSub-2.sh  PauliSub.sh  PauliSub_SC.sh  README.txt  TEST.h5  build.sh  hubb_chain_2b.cpp  hubb_chain_2b_low.cpp  hubb_chain_tpp.cpp  no_ramp_0.15.h5  pythonsub.py  ramp_0.15.h5  ramp_0.15.h5_new  ramp_0.15.h5_new_new
CalcA/: CMakeLists.txt  calcA.cpp  calcA_tti.cpp
ED/: ExactDiagonalization.nb  ExactDiagonalization2.nb  ExactDiagonalization_mol_tti.nb  ExactDiagonalizationmol.nb
ED/hybfermion/: CMakeLists.txt  PauliSub.sh  hybfermion.cpp  hybfermion.hpp
ci/: Jenkinsfile.pauli  build.jenkins.pauli.sh
data/: Compression.ipynb  NEdyson-input-hf-tti.ini  NEdyson-input-hf.ini  NEdyson-input-tti.ini  NEdyson-input.ini  NEdyson-input0.ini  NEdyson-input1.ini  NEdyson-input2.ini  NEdyson-input3.ini  NEdyson-input4.ini  NEdyson-input5.ini  NEdyson-input6.ini  NEdyson-input7.ini  Untitled.ipynb  flops.ipynb  h2sto.params.ini
data/.ipynb_checkpoints/: Compression-checkpoint.ipynb  Untitled-checkpoint.ipynb  flops-checkpoint.ipynb
headers2/: NEdyson.hpp  dyson.cpp  dyson.hpp  elementops.cpp  elementops.hpp  function.cpp  function.hpp  greens.cpp  greens.hpp  greens_tstp.cpp  greens_tstp.hpp  hubbchainops.cpp  hubbchainops.hpp  integrals.cpp  integrals.hpp  integration.cpp  integration.hpp  mat_utils.cpp  mat_utils.hpp  param.hpp  spectral.cpp  spectral.hpp  vie2.cpp  vie2.hpp
inputs/: NEdyson-input-H2-2.ini  NEdyson-input-H2.ini  NEdyson-input-hubb.ini  NEdyson-input0.ini
programs/: CMakeLists.txt  SC.cpp  calccoeff.cpp  gen_Xinyang_data.cpp  hubb_chain_2b.cpp  hubb_chain_2b_B.cpp  hubb_chain_2b_omp.cpp  hubb_chain_tpp.cpp  main.cpp  main_SC.cpp  main_hubb.cpp  main_mol.cpp  math_compare.cpp
python/: greens.py  spectral.py
python/gen_input/: .gen_input.py.swp  H2pvdz.h5  H2pvdz1.4A.h5  H2sto1.4A.h5  H2sto6g.h5  Hepvdz.h5  Hepvtz.h5  Nesto6g.h5  Untitled.ipynb  gen_input.py  gen_pp_fields.py
python/linpred/: GRexpand.py
python/plot/: Ainteg.py  Aplot.py  AplotCHeck.py  GLplot.py  GMplot.py  GRplot.py
src/: .dyson.h.swp  .dyson_step.h.swp  .dyson_step_parallel.h.swp  .mol2bSolver.cpp.swp  .spectral.h.swp  CMakeLists.txt  NEdyson.cpp  NEdyson.h  SCHFSolver.cpp  SCHFSolver.h  dyson.cpp  dyson.h  dyson_boot.h  dyson_boot_hf.h  dyson_dfield.h  dyson_free.h  dyson_hf.cpp  dyson_hf.h  dyson_integrals.h  dyson_omp.cpp  dyson_omp.h  dyson_step.h  dyson_step_hf.h  dyson_step_parallel.h  dyson_tti_boot.h  dyson_tti_boot_hf.h  dyson_tti_integrals.h  dyson_tti_step.h  dyson_tti_step_hf.h  elementops.cpp  elementops.h  frepr  function.cpp  function.h  greens.cpp  greens.h  greens_tstp.cpp  greens_tstp.h  hf_efield_molNEsim.cpp  hf_efield_molNEsim.h  (+47 more)
tests/: CMakeLists.txt  DTTIsim-test.cpp  Dsim-test.cpp  NTTIsim-test.cpp  Nsim-test.cpp  SDTTIsim-test.cpp  SDsim-test.cpp  STTIsim-test.cpp  Ssim-test.cpp  dyson-test.cpp  dyson_omp-test.cpp  free-test.cpp  hubb-test.cpp  integrals-test.cpp  integration-test.cpp  mol2bSolver-test.cpp  molHFSolver-test.cpp  parallel_integrals-test.cpp  set_up_g.h  spectral-test.cpp  tests-def.h  vie2-test.cpp
tests/data/: DTTIsim.h5  Dsim.h5  Gfree_GRExp.data  Gfree_const.h5  Gfree_nconst.h5  NDTTIsim.h5  NDsim.h5  NTTIsim.h5  SDTTIsim.h5  STTIsim.h5  calccoeff.h5  dyson_test_data.h5  hf-spin.hdf5  hf.hdf5  hubb_SE_test_data.h5  int_test_data.h5  repn.hdf5  spectral.h5  vie2_test_data.h5
